Fix duplicate editor problem

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Vite App</title>
-  <style>
+  <title>MeaganDocs</title>
+  <link href="/src/css/tailwind.css" rel="stylesheet" />
+
+  <!-- <style>
     html,
     body,
     #app,
@@ -25,7 +27,7 @@
     .ProseMirror {
       height: 100%
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
