--- a/public/index.html
+++ b/public/index.html
@@ -8,19 +8,24 @@
   <title>MeaganDocs</title>
   <link href="/src/css/tailwind.css" rel="stylesheet" />
 
-  <style>
+  <!-- <style>
     html,
     body,
     #app,
     #app>div {
       height: 100%;
-      padding-top: 8px;
+      padding: 8px;
     }
 
     .toolbar {
-      position: fixed;
-      left: 0;
-      top: 0;
+      /* position: fixed; */
+      /* left: 0;
+      top: 0; */
+      /* background-color: pink; */
+      border-bottom: 2px solid gray;
+      /* height: 30px; */
+      width: 20%;
+      height: 100%;
     }
 
     .btn {
@@ -37,11 +42,12 @@
       transform: scale(1.03)
     }
 
-    .fullheight,
-    .ProseMirror {
-      height: 100%
+    .fullheight {
+      height: 20%;
+      width: 50%;
+      background-color: purple;
     }
-  </style>
+  </style> -->
 </head>
 
 <body>
