Error - cannot contain ES exports

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <link rel="icon" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>MeaganDocs</title>
-  <link href="/src/css/tailwind.css" rel="stylesheet" />
+  <!-- <link href="/src/css/tailwind.css" rel="stylesheet" /> -->
+  <link href="/tailwind.css" rel="stylesheet">
 
   <style>
     html,
@@ -39,7 +40,10 @@
 
     .fullheight,
     .ProseMirror {
-      height: 100%
+      height: 100%;
+      padding-top: 2px;
+      padding-left: 10px;
+      background-color: pink;
     }
   </style>
 </head>
